// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot 1`] = `
<header
  className="sc-bwzfXH kGqwtf"
>
  <h1
    className="sc-bdVaJa bUEgTO"
  >
    My Movies
  </h1>
</header>
`;

exports[`Main component should match empty snapshot 1`] = `
<main>
  <div
    className="sc-htpNat VPkom"
  >
    Movies now playing
  </div>
  <div
    id="MinRatingSelect"
  >
    <label>
      Choose a minimum rating: 
    </label>
    <select
      className="sc-bxivhb jUndbY"
      onChange={[Function]}
      value={0}
    >
      <option
        value="0"
      >
        none
      </option>
      <option
        value={5}
      >
        5
      </option>
      <option
        value={5.5}
      >
        5.5
      </option>
      <option
        value={6}
      >
        6
      </option>
      <option
        value={6.5}
      >
        6.5
      </option>
      <option
        value={7}
      >
        7
      </option>
      <option
        value={7.5}
      >
        7.5
      </option>
      <option
        value={8}
      >
        8
      </option>
      <option
        value={8.5}
      >
        8.5
      </option>
      <option
        value={9}
      >
        9
      </option>
      <option
        value={9.5}
      >
        9.5
      </option>
      <option
        value={10}
      >
        10
      </option>
    </select>
  </div>
  <div
    className="sc-ifAKCX hjpakO"
  />
  <footer
    className="sc-EHOje kXDFbL"
  >
    <img
      alt="tmdb logo"
      className="sc-bZQynM brufEJ"
      src="tmdb-logo.png"
    />
    <div
      className="sc-gzVnrw jFEtkM"
    >
      This product uses the TMDb API but is not endorsed or certified by TMDb.
    </div>
  </footer>
</main>
`;

exports[`Main component should match snapshot with min rating 1`] = `
<main>
  <div
    className="sc-kAzzGY gHxlAo"
  >
    Movies now playing
  </div>
  <div
    id="MinRatingSelect"
  >
    <label>
      Choose a minimum rating: 
    </label>
    <select
      className="sc-chPdSV kDcBlS"
      onChange={[Function]}
      value={8}
    >
      <option
        value="0"
      >
        none
      </option>
      <option
        value={5}
      >
        5
      </option>
      <option
        value={5.5}
      >
        5.5
      </option>
      <option
        value={6}
      >
        6
      </option>
      <option
        value={6.5}
      >
        6.5
      </option>
      <option
        value={7}
      >
        7
      </option>
      <option
        value={7.5}
      >
        7.5
      </option>
      <option
        value={8}
      >
        8
      </option>
      <option
        value={8.5}
      >
        8.5
      </option>
      <option
        value={9}
      >
        9
      </option>
      <option
        value={9.5}
      >
        9.5
      </option>
      <option
        value={10}
      >
        10
      </option>
    </select>
  </div>
  <div
    className="sc-kgoBCf gdLqKu"
  />
  <footer
    className="sc-kGXeez goMMxa"
  >
    <img
      alt="tmdb logo"
      className="sc-kpOJdX bQiTNm"
      src="tmdb-logo.png"
    />
    <div
      className="sc-dxgOiQ cbMbPk"
    >
      This product uses the TMDb API but is not endorsed or certified by TMDb.
    </div>
  </footer>
</main>
`;

exports[`Main component should match snapshot with movie data 1`] = `
<main>
  <div
    className="sc-htoDjs jSBmjZ"
  >
    Movies now playing
  </div>
  <div
    id="MinRatingSelect"
  >
    <label>
      Choose a minimum rating: 
    </label>
    <select
      className="sc-dnqmqq dVLGNk"
      onChange={[Function]}
      value={0}
    >
      <option
        value="0"
      >
        none
      </option>
      <option
        value={5}
      >
        5
      </option>
      <option
        value={5.5}
      >
        5.5
      </option>
      <option
        value={6}
      >
        6
      </option>
      <option
        value={6.5}
      >
        6.5
      </option>
      <option
        value={7}
      >
        7
      </option>
      <option
        value={7.5}
      >
        7.5
      </option>
      <option
        value={8}
      >
        8
      </option>
      <option
        value={8.5}
      >
        8.5
      </option>
      <option
        value={9}
      >
        9
      </option>
      <option
        value={9.5}
      >
        9.5
      </option>
      <option
        value={10}
      >
        10
      </option>
    </select>
  </div>
  <div
    className="sc-iwsKbI iSwkUK"
  >
    <div
      className="sc-gZMcBi imdaMP"
      name="MovieGridItem"
    >
      <img
        alt="Fifty Shades Freed"
        src="http://image.tmdb.org/t/p/w200//jjPJ4s3DWZZvI4vw8Xfi4Vqa1Q8.jpg"
        width="200"
      />
      <h3>
        Fifty Shades Freed
      </h3>
      <div>
        Rating: 
        6.1
      </div>
      <div>
        Review Count: 
        1097
      </div>
    </div>
    <div
      className="sc-gqjmRU hjPhi"
      name="MovieGridItem"
    >
      <img
        alt="Black Panther"
        src="http://image.tmdb.org/t/p/w200//uxzzxijgPIY7slzFvMotPv8wjKA.jpg"
        width="200"
      />
      <h3>
        Black Panther
      </h3>
      <div>
        Rating: 
        7.4
      </div>
      <div>
        Review Count: 
        3477
      </div>
    </div>
    <div
      className="sc-VigVT gwDSPQ"
      name="MovieGridItem"
    >
      <img
        alt="Coco"
        src="http://image.tmdb.org/t/p/w200//eKi8dIrr8voobbaGzDpe8w0PVbC.jpg"
        width="200"
      />
      <h3>
        Coco
      </h3>
      <div>
        Rating: 
        7.8
      </div>
      <div>
        Review Count: 
        3404
      </div>
    </div>
    <div
      className="sc-jTzLTM gJCtnK"
      name="MovieGridItem"
    >
      <img
        alt="Tomb Raider"
        src="http://image.tmdb.org/t/p/w200//ePyN2nX9t8SOl70eRW47Q29zUFO.jpg"
        width="200"
      />
      <h3>
        Tomb Raider
      </h3>
      <div>
        Rating: 
        6.1
      </div>
      <div>
        Review Count: 
        588
      </div>
    </div>
  </div>
  <footer
    className="sc-fjdhpX gDFkmU"
  >
    <img
      alt="tmdb logo"
      className="sc-jzJRlG iwPmjt"
      src="tmdb-logo.png"
    />
    <div
      className="sc-cSHVUG kdwfCy"
    >
      This product uses the TMDb API but is not endorsed or certified by TMDb.
    </div>
  </footer>
</main>
`;

exports[`Main component should select a min rating 1`] = `
<main>
  <div
    className="sc-ckVGcZ liuaMw"
  >
    Movies now playing
  </div>
  <div
    id="MinRatingSelect"
  >
    <label>
      Choose a minimum rating: 
    </label>
    <select
      className="sc-jKJlTe dyrHeg"
      onChange={[Function]}
      value={0}
    >
      <option
        value="0"
      >
        none
      </option>
      <option
        value={5}
      >
        5
      </option>
      <option
        value={5.5}
      >
        5.5
      </option>
      <option
        value={6}
      >
        6
      </option>
      <option
        value={6.5}
      >
        6.5
      </option>
      <option
        value={7}
      >
        7
      </option>
      <option
        value={7.5}
      >
        7.5
      </option>
      <option
        value={8}
      >
        8
      </option>
      <option
        value={8.5}
      >
        8.5
      </option>
      <option
        value={9}
      >
        9
      </option>
      <option
        value={9.5}
      >
        9.5
      </option>
      <option
        value={10}
      >
        10
      </option>
    </select>
  </div>
  <div
    className="sc-eNQAEJ fCssbo"
  >
    <div
      className="sc-hMqMXs dtFEWJ"
      name="MovieGridItem"
    >
      <img
        alt="Fifty Shades Freed"
        src="http://image.tmdb.org/t/p/w200//jjPJ4s3DWZZvI4vw8Xfi4Vqa1Q8.jpg"
        width="200"
      />
      <h3>
        Fifty Shades Freed
      </h3>
      <div>
        Rating: 
        6.1
      </div>
      <div>
        Review Count: 
        1097
      </div>
    </div>
    <div
      className="sc-kEYyzF jLQnvE"
      name="MovieGridItem"
    >
      <img
        alt="Black Panther"
        src="http://image.tmdb.org/t/p/w200//uxzzxijgPIY7slzFvMotPv8wjKA.jpg"
        width="200"
      />
      <h3>
        Black Panther
      </h3>
      <div>
        Rating: 
        7.4
      </div>
      <div>
        Review Count: 
        3477
      </div>
    </div>
    <div
      className="sc-kkGfuU iNJJiR"
      name="MovieGridItem"
    >
      <img
        alt="Coco"
        src="http://image.tmdb.org/t/p/w200//eKi8dIrr8voobbaGzDpe8w0PVbC.jpg"
        width="200"
      />
      <h3>
        Coco
      </h3>
      <div>
        Rating: 
        7.8
      </div>
      <div>
        Review Count: 
        3404
      </div>
    </div>
    <div
      className="sc-iAyFgw kYdYEK"
      name="MovieGridItem"
    >
      <img
        alt="Tomb Raider"
        src="http://image.tmdb.org/t/p/w200//ePyN2nX9t8SOl70eRW47Q29zUFO.jpg"
        width="200"
      />
      <h3>
        Tomb Raider
      </h3>
      <div>
        Rating: 
        6.1
      </div>
      <div>
        Review Count: 
        588
      </div>
    </div>
  </div>
  <footer
    className="sc-hSdWYo iDymVq"
  >
    <img
      alt="tmdb logo"
      className="sc-eHgmQL iSkMLG"
      src="tmdb-logo.png"
    />
    <div
      className="sc-cvbbAY fBZXoc"
    >
      This product uses the TMDb API but is not endorsed or certified by TMDb.
    </div>
  </footer>
</main>
`;

exports[`Main component should select a min rating 2`] = `
<main>
  <div
    className="sc-jWBwVP hhMTqe"
  >
    Movies now playing
  </div>
  <div
    id="MinRatingSelect"
  >
    <label>
      Choose a minimum rating: 
    </label>
    <select
      className="sc-brqgnP hHZIME"
      onChange={[Function]}
      value={7}
    >
      <option
        value="0"
      >
        none
      </option>
      <option
        value={5}
      >
        5
      </option>
      <option
        value={5.5}
      >
        5.5
      </option>
      <option
        value={6}
      >
        6
      </option>
      <option
        value={6.5}
      >
        6.5
      </option>
      <option
        value={7}
      >
        7
      </option>
      <option
        value={7.5}
      >
        7.5
      </option>
      <option
        value={8}
      >
        8
      </option>
      <option
        value={8.5}
      >
        8.5
      </option>
      <option
        value={9}
      >
        9
      </option>
      <option
        value={9.5}
      >
        9.5
      </option>
      <option
        value={10}
      >
        10
      </option>
    </select>
  </div>
  <div
    className="sc-cMljjf jUnOyQ"
  >
    <div
      className="sc-jAaTju hSMtBi"
      name="MovieGridItem"
    >
      <img
        alt="Black Panther"
        src="http://image.tmdb.org/t/p/w200//uxzzxijgPIY7slzFvMotPv8wjKA.jpg"
        width="200"
      />
      <h3>
        Black Panther
      </h3>
      <div>
        Rating: 
        7.4
      </div>
      <div>
        Review Count: 
        3477
      </div>
    </div>
    <div
      className="sc-jDwBTQ cGOPtL"
      name="MovieGridItem"
    >
      <img
        alt="Coco"
        src="http://image.tmdb.org/t/p/w200//eKi8dIrr8voobbaGzDpe8w0PVbC.jpg"
        width="200"
      />
      <h3>
        Coco
      </h3>
      <div>
        Rating: 
        7.8
      </div>
      <div>
        Review Count: 
        3404
      </div>
    </div>
  </div>
  <footer
    className="sc-gPEVay imyWEp"
  >
    <img
      alt="tmdb logo"
      className="sc-iRbamj jALgdM"
      src="tmdb-logo.png"
    />
    <div
      className="sc-jlyJG twsVl"
    >
      This product uses the TMDb API but is not endorsed or certified by TMDb.
    </div>
  </footer>
</main>
`;
